--- a/index.html
+++ b/index.html
@@ -13,32 +13,25 @@
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
-            >
+            <button class="header__theme-menu-button header__theme-menu-button_type_light">
               день
             </button>
           </li>
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-              disabled
-            >
+            <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled>
               авто
             </button>
           </li>
           <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
-            >
+            <button class="header__theme-menu-button header__theme-menu-button_type_dark">
               неон
             </button>
           </li>
@@ -46,7 +39,7 @@
       </nav>
       <h1 class="header__title">no focus</h1>
       <p class="header__text text-decor">
-        Что делать, когда не можешь делать ничего <br />Или почему нам так
+        Что делать, когда не можешь делать ничего <br/>Или почему нам так
         сложно сконцентрироваться, особенно когда очень надо
       </p>
       <span class="decor" aria-hidden="true"></span>
@@ -66,8 +59,9 @@
                 href="https://www.dana.org/article/multicosts-of-multitasking/"
                 class="section__article-text-link"
                 target="_blank"
-                >выяснили</a
-              >, что мозгу тяжело концентрироваться даже на двух делах
+              >
+                выяснили
+              </a>, что мозгу тяжело концентрироваться даже на двух делах
               одновременно. А когда в поле внимания попадает несколько важных
               задач, организм паникует и выделяет кортизол и адреналин —
               «гормоны стресса». Из-за этого мы работаем невнимательно:
@@ -175,8 +169,9 @@
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   class="section__article-text-link"
                   target="_blank"
-                  >показал</a
-                >, что созерцание природы повышает концентрацию, в то время как
+                >
+                  показал
+                </a>, что созерцание природы повышает концентрацию, в то время как
                 после просмотра городских пейзажей она наоборот понижается.
                 Можно совместить прогулку с физическими упражнениями или бегом —
                 так в мозг поступит ещё больше кислорода и он будет лучше
@@ -215,36 +210,11 @@
         <h2 class="section__title dark-title title-decor">
           А можно в картинках?
         </h2>
-        <img
-          class="section__image"
-          src="./images/sunset.png"
-          alt="Sunset"
-          loading="lazy"
-        />
-        <img
-          class="section__image"
-          src="./images/ice-cream.png"
-          alt="Icecream"
-          loading="lazy"
-        />
-        <img
-          class="section__image"
-          src="./images/tape.png"
-          alt="Tape"
-          loading="lazy"
-        />
-        <img
-          class="section__image"
-          src="./images/books.png"
-          alt="Books"
-          loading="lazy"
-        />
-        <img
-          class="section__image"
-          src="./images/street.png"
-          alt="Street"
-          loading="lazy"
-        />
+        <img class="section__image" src="./images/sunset.png" alt="Sunset" loading="lazy" />
+        <img class="section__image" src="./images/ice-cream.png" alt="Icecream" loading="lazy" />
+        <img class="section__image" src="./images/tape.png" alt="Tape" loading="lazy" />
+        <img class="section__image" src="./images/books.png" alt="Books" loading="lazy" />
+        <img class="section__image" src="./images/street.png" alt="Street" loading="lazy" />
       </section>
     </main>
     <footer class="footer decorated-zone">
