--- a/index.html
+++ b/index.html
@@ -206,19 +206,19 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section section__gallery">
         <h2 class="section__title dark-title title-decor">
           А можно в картинках?
         </h2>
-        <img class="section__image" src="./images/sunset.png" alt="Sunset" loading="lazy" />
-        <img class="section__image" src="./images/ice-cream.png" alt="Icecream" loading="lazy" />
-        <img class="section__image" src="./images/tape.png" alt="Tape" loading="lazy" />
-        <img class="section__image" src="./images/books.png" alt="Books" loading="lazy" />
-        <img class="section__image" src="./images/street.png" alt="Street" loading="lazy" />
+        <img class="section__image section__image-large_horizontal" src="./images/sunset.png" alt="Закат" loading="lazy" />
+        <img class="section__image section__image-large_vertical" src="./images/ice-cream.png" alt="Мороженное" loading="lazy" />
+        <img class="section__image section__image-large_vertical" src="./images/tape.png" alt="Кассета" loading="lazy" />
+        <img class="section__image" src="./images/books.png" alt="Книги" loading="lazy" />
+        <img class="section__image section__image-large_horizontal" src="./images/street.png" alt="Улица" loading="lazy" />
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h3 class="footer__title">focus</h3>
+      <h2 class="footer__title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
