Fixed automatic theme

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
       </section>
       <section class="section section__gallery">
-        <h2 class="section__title dark-title title-decor">
+        <h2 class="section__title gallery-title title-decor">
           А можно в картинках?
         </h2>
         <img class="section__image section__image-large_horizontal" src="./images/sunset.png" alt="Закат" loading="lazy" />
